DNS 서버 반영에 따른 서버 주소 변경

--- a/event-api/src/docs/asciidoc/index.adoc
+++ b/event-api/src/docs/asciidoc/index.adoc
@@ -1,7 +1,7 @@
 ifndef::snippets[]
 :snippets: ./build/generated-snippets
 endif::[]
-= API Document(Geometry Server)
+= API Document(Event Server)
 :doctype: book
 :icons: font
 :source-highlighter: highlightjs
